# ircsp_v2

./: AUTHORS  ChangeLog  Header  LICENSE  README.md  TODO  autogen.sh  build.sh  clean.sh  configure.in  count.sh  version.sh
conf/: ircsp.conf
data/: admin.db  gline.db  nickjupe.db  uwcmd.db
helpfiles/cservice/: index
helpfiles/nservice/: index
helpfiles/uworld/: auth  gline  index  remgline  uptime
include/: channels.h  conf.h  cservice.h  debug.h  flags.h  ircsp.h  log.h  m_burst.h  m_create.h  m_destruct.h  m_join.h  m_kill.h  m_mode.h  m_nick.h  m_parse.h  m_part.h  m_ping.h  m_privmsg.h  m_quit.h  m_server.h  m_squit.h  m_stats.h  macros.h  match.h  memory.h  misc.h  nservice.h  numeric.h  rehash.h  servers.h  socket.h  strings.h  synch.h  users.h  uworld.h  version.h  write.h
source/: .#version.c.1.8  Makefile.am  channels.c  conf.c  cservice.c  debug.c  ircsp.c  log.c  m_burst.c  m_create.c  m_destruct.c  m_join.c  m_kill.c  m_mode.c  m_nick.c  m_parse.c  m_part.c  m_ping.c  m_privmsg.c  m_quit.c  m_server.c  m_squit.c  m_stats.c  match.c  memory.c  misc.c  nservice.c  numeric.c  rehash.c  servers.c  socket.c  strings.c  synch.c  users.c  uworld.c  version.c  write.c
