AC_INIT(configure.in)
AM_INIT_AUTOMAKE(IRCSP, 1.0.2-alpha, jovens@gotunix.net)
AM_CONFIG_HEADER(./config.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_PROG_INSTALL
#AC_PROG_LN_S
#AC_PROG_RANLIB
#AC_PROG_LIBTOOL
AC_ISC_POSIX	
#AC_HEADER_STDC

#AC_CHECK_HEADERS(assert.h stdio.h stdlib.h stdarg.h)

AC_TYPE_SIGNAL

AC_C_BIGENDIAN
AC_C_CONST
AC_C_INLINE
AC_CHECK_SIZEOF(int, 4)
AC_CHECK_SIZEOF(long, 4)
AC_CHECK_SIZEOF(wchar_t, 4)

#AC_CHECK_PROG(strip, strip, strip, :)

#AC_CHECK_FUNCS(getcwd)
#AC_CHECK_FUNCS(mkdir)
#AC_CHECK_FUNCS(snprintf)
#AC_CHECK_FUNCS(strcasecmp strcasestr strcasencmp strtok)
#AC_CHECK_FUNCS(setenv unsetenv)
#AC_CHECK_FUNCS(strdup strndup)

AC_OUTPUT(Makefile)
AC_OUTPUT(source/Makefile)
