SUBDIRS = .

## src/Makefile.am
bin_PROGRAMS = ircsp
ircsp_SOURCES = \
		version.c \
		debug.c \
		log.c \
		channels.c \
		memory.c \
		numeric.c \
		strings.c \
		conf.c \
		socket.c \
		users.c \
		servers.c \
		match.c \
		misc.c \
		m_parse.c \
		synch.c \
		rehash.c \
		m_destruct.c \
		m_server.c \
		m_nick.c \
		m_join.c \
		m_part.c \
		m_mode.c \
		m_create.c \
		m_burst.c \
		m_privmsg.c \
		m_quit.c \
		m_kill.c \
		m_stats.c \
		m_squit.c \
		m_ping.c \
		write.c \
		ircsp.c \
		nservice.c \
		cservice.c \
		uworld.c 

INCLUDES = -I../include

AM_LDFLAGS = -g -O2 -pipe -Wall -Wstrict-prototypes -Wmissing-prototypes

